fixed(footer): text wrapping on mobile resolution

--- a/src/styles/components/footer.css
+++ b/src/styles/components/footer.css
@@ -22,6 +22,13 @@ footer{
 }
 .Footer-link img{
     margin-right: 0.2rem;
+    height: 1.5rem;
+    width: auto;
+}
+.Footer-link_wrap img{
+    margin-right: 0.2rem;
+    height: 1.5rem;
+    width: auto;
 }
 .Footer-holder{
     display: flex;
@@ -37,7 +44,7 @@ footer{
     }
     .Footer-link{
         word-wrap: break-word;
-        text-wrap: unset;
+        text-wrap: nowrap;
     }
     #Footer-gttLogo{
         height: 1rem;
@@ -48,5 +55,18 @@ footer{
         padding-bottom: 0.1rem;
         border-right: 0rem solid white;
         border-bottom: 0.1rem solid white;
+    }
+}
+
+@media screen and (max-width: 400px) {
+    .Footer-link{
+        word-wrap: break-word;
+        text-wrap: unset;
+    }
+    .Footer-link_wrap{
+        padding-bottom: 0.2rem;
+    }
+    .Footer-link_wrap img{
+        margin-right: 0.2rem;
     }
 }
